    - Fixed Tiberium Centrifuge icon colors being in the wrong order
    - Added missing localisation for some alerts
  Changes:
    - Changed Informatron to an optional dependency
    - Improved balance when used with Space Exploration
    - Tiberium Seed Rockets can no longer spawn Tiberium Blossom Trees close together
    - Renamed Growth Credits to Tiberium Substrate
    - Tiberium now spreads much more rapidly when consuming resource patches
  Features:
    - Added Tiberium Detonation Charge for destroying Tiberium Blossom Trees
    - Added Tiberium Reprocessor structure for more rapidly recycling unused ores into Tiberium Substrate
    - Added settings for customizing the growth rate of Blue Tiberium
    - Added setting for improving end-game UPS
---------------------------------------------------------------------------------------------------
Version: 1.1.24
  Bugfixes:
    - Fixed SRF emitters being disabled by AOE damage
    - Fixed crashes occurring when new forces were created
    - Fixed speed upgrades not working when Space Exploration is active
---------------------------------------------------------------------------------------------------
Version: 1.1.23
  Bugfixes:
    - Fixed Tiberium ore growing on top of water when certain mods were active (Thanks to Tazzer93 for fixing this with a pull request!)
    - Fixed centrifuging recipes missing ores when Extended Rocket Payloads Continued was active
    - Fixed Tiberium Armor items and recipes still showing up in certain menus after they were removed
  Features:
    - Updated compatibility for new version of Obelisks of Light mod
    - Made AAI miners immune to damage from Tiberium growth so they stop dying while mining Tiberium
    - Created add_tiberium_immunity and add_tiberium_immunity_prototype remote interface functions so other mods can flag their entities as unaffected by the damage from Tiberium growth