@@ -117,7 +117,7 @@ tiberium-centrifuge-2=An upgraded centrifuge hardened against Tiberium contact, 
 tiberium-centrifuge-3=A high-tech centrifuge hardened against Tiberium contact, for separating it into its components.
 tiberium-marv=A slow, heavily-armored vehicle that can destroy fields of Tiberium Ore just by driving over them.
 tiberium-aoe-node-harvester=A node harvester that harvests in an area.
-tiberium-beacon-node=A node in the Tiberium Control Network that enhances nearby Tiberium-specialized mining equipment.  A miner can be enhanced by up to 3 nearby TCN Nodes, each granting increased speed and power usage.
+tiberium-beacon-node=A node in the Tiberium Control Network that enhances nearby Tiberium-specialized mining equipment.  A miner can be enhanced by up to 3 nearby TCN Nodes, each granting increased speed and power usage. A miner affected by any TCN Node requires an additional 5MW of power.
 TCN-beacon=A specialty modules to recieve the TCN boost for target entities.
 tiberium-advanced-guard-tower=A versatile defensive structure that fires salvos of missiles from its Tomahawk missile launchers. General Sheppard insists that you not load them with Atomic Bombs.
 tiberium-obelisk-of-light=A massively powerful Brotherhood of Nod laser weapon that requires time to charge its capacitors before each shot.
