@@ -380,7 +380,7 @@ data:extend{
 		stack_size = 50,
 		fuel_value = "2MJ",
 		fuel_category = "chemical",
-		fuel_emissions_multiplier = 5,
+		fuel_emissions_multiplier = 4,
 	},
 	{
 		type = "item",
@@ -394,7 +394,7 @@ data:extend{
 		stack_size = 50,
 		fuel_value = "8MJ",
 		fuel_category = "chemical",
-		fuel_emissions_multiplier = 5,
+		fuel_emissions_multiplier = 4,
 	},
 	--Dummy Items
 	{
