@@ -254,7 +254,7 @@ data:extend{
 		category = "oil-processing",
 		crafting_machine_tint = common.tibCraftingBlueTint,
 		energy_required = 30,
-		emissions_multiplier = 8,
+		emissions_multiplier = 4,
 		enabled = false,
 		ingredients = {
 			{type = "fluid", name = "tiberium-slurry-blue", amount = 16},
@@ -275,7 +275,7 @@ data:extend{
 		category = "chemistry",
 		crafting_machine_tint = common.tibCraftingBlueTint,
 		energy_required = 4,
-		emissions_multiplier = 8,
+		emissions_multiplier = 4,
 		enabled = false,
 		ingredients = {
 			{type = "fluid", name = "tiberium-slurry-blue", amount = 2},
@@ -399,7 +399,7 @@ data:extend{
 		name = "tiberium-liquid-processing",
 		category = "oil-processing",
 		energy_required = 20,
-		emissions_multiplier = 15,
+		emissions_multiplier = 8,
 		enabled = false,
 		ingredients = {
 			{type = "fluid", name = "molten-tiberium", amount = 16},
