@@ -9,10 +9,14 @@ Version: 1.1.25
     - Improved balance when used with Space Exploration
     - Tiberium Seed Rockets can no longer spawn Tiberium Blossom Trees close together
     - Renamed Growth Credits to Tiberium Substrate
+    - Made the Tiberium Substrate recipes twice as fast (except for the ingredientless recipe)
     - Tiberium now spreads much more rapidly when consuming resource patches
+    - Tiberium Military 1 now reduces Tiberium damage taken by 75% instead of 80%
+    - Reduced some emission multipliers
   Features:
     - Added Tiberium Detonation Charge for destroying Tiberium Blossom Trees
     - Added Tiberium Reprocessor structure for more rapidly recycling unused ores into Tiberium Substrate
+    - Added an alert for players who are taking damage from Tiberium radiation
     - Added settings for customizing the growth rate of Blue Tiberium
     - Added setting for improving end-game UPS
 ---------------------------------------------------------------------------------------------------
